Finished index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--ICS2O-UNIT1-TEMPLATE-->
+<!--ICS2O-UNIT2-04-JS-AREA-->
 <html lang="en-ca">
   <head>
     <meta charset="utf-8" />
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
-    <title>TEMPLATE</title>
+    <title>Area of a triangle</title>
   </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -28,31 +28,49 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header" style="text-align: center">
         <div class="mdl-layout-header-row">
-          <span class="mdl-layout__title">Header</span>
+          <span class="mdl-layout__title">Area of a Triangle</span>
         </div>
       </header>
       <main class="mdl-layout__content">
         <!--Text field for Street Name-->
         <form action="#">
-          <h3>Textfield</h3>
+          <h3>Height</h3>
           <div class="mdl-textfield mdl-js-textfield">
             <input
               class="mdl-textfield__input"
-              type="text"
-              pattern="[a-zA-Z]*"
-              id="template"
+              type="number"
+              pattern="[0-9]*"
+              id="triangleHeight"
             />
             <!--This will control the textfields error message and label-->
-            <label class="mdl-textfield__label" for="template">Template</label>
-            <span class="mdl-textfield__error">Letters Only!</span>
+            <label class="mdl-textfield__label" for="triangleHeight"
+              >Height</label
+            >
+            <span class="mdl-textfield__error">Numbers Only!</span>
+          </div>
+        </form>
+        <form action="#">
+          <h3>Base</h3>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="number"
+              pattern="[0-9]*"
+              id="triangleBase"
+            />
+            <!--This will control the textfields error message and label-->
+            <label class="mdl-textfield__label" for="triangleBase"
+              >Base</label
+            >
+            <span class="mdl-textfield__error">Numbers Only!</span>
           </div>
         </form>
         <!-- Accent-colored raised button -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
-          onclick="myButtonClicked()"
+          onclick="calculate()"
         >
-          Enter
+          Calculate
         </button>
       </main>
     </div>
