--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <span class="mdl-textfield__error">Numbers Only!</span>
           </div>
         </form>
+        <!-- Textfield for base-->
         <form action="#">
           <h3>Base</h3>
           <div class="mdl-textfield mdl-js-textfield">
